--- a/Notebooks/NumIntegr/NumIntegr.ipynb
+++ b/Notebooks/NumIntegr/NumIntegr.ipynb
@@ -166,7 +166,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "def g_x_1(x):\n",
+    "    x = 0.1 * (x ** 4)-1.5 * x ** 3 + 0.53 * x ** 2 + 1 \n",
+    "    return x \n",
+    "\n",
+    "def integr_g_x_1(g_x_1, a, b, N, method='midpoint'):\n",
+    "    if method == 'midpoint': \n",
+    "        #calculate vector of N + 1 bar bounds \n",
+    "        bin_cutoffs = np.linespace(a, b, N + 1)\n",
+    "        \n",
+    "        #calculate vector of midpoints\n",
+    "        \n",
+    "        #evaluate the function at the midpoints \n",
+    "        \n",
+    "        #add up the area of all the bars \n",
+    "        approx_integr = \n",
+    "    return approx_integr "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
